<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.billyhunt.shotloop.aboutActivity"
    android:background="#444444">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp"
        android:textColor="#FFFFFF"
        android:text="@string/app_name"
        android:id="@+id/about_appName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:paddingBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#EEEEEE"
        android:text="@string/my_name"
        android:id="@+id/about_creator"
        android:layout_below="@id/about_appName"
        android:layout_alignLeft="@id/about_appName"
        android:paddingBottom="70dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:text="@string/about_appDetails"
        android:id="@+id/about_app"
        android:layout_below="@id/about_creator"
        android:layout_alignLeft="@id/about_appName"
        android:paddingBottom="10dp"
        android:paddingRight="50dp"
        />


</RelativeLayout>
